--- a/src/styles/components/_misc.scss
+++ b/src/styles/components/_misc.scss
@@ -181,6 +181,118 @@
   border: none;
 }
 
+
+
+.chatoverlay-sendbutton{
+  margin-left: 8px;
+  padding: 0 10px;
+  height: 100%;
+  background-color: transparent;
+  border: none;
+  border-radius: 5px;
+  color: #f8ec94;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.2s ease;
+  transform: scaleX(-1);
+  opacity: .7;
+}
+.chatoverlay-sendbutton:hover{
+  color: #fff;
+}
+
+.chatoverlay-scrollbutton{
+  position: absolute;
+  left: 50%;
+  bottom: 58px;
+  cursor: pointer;
+  text-align: center;
+  padding: 10px 20px;
+  font-weight: 600;
+  background-color: hsla(53,88%,78%,.1);
+  color: #f8ec94;
+  text-transform: uppercase;
+  border-radius: 4px;
+  border: 1px solid #f8ec94;
+  transform: translateX(-50%);
+  display: none; /* Hidden by default */
+  z-index: 10000;
+  width: 95%;
+}
+.chatoverlay-scrollbutton:hover{
+  color: #fff;
+  border-color: #fff;
+  background-color: #191d21;
+}
+
+
+.chatoverlay-overlaywrapper {
+  position: absolute;
+  right: 16px;
+  pointer-events: auto;
+  width: 18vw;
+  height: calc(100% - 128px);
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 1;
+  display: none; /* Hidden by default */
+  border-radius: 4px;
+  padding: 10px;
+  box-sizing: border-box;
+  float: right;
+  bottom: 64px;
+  top: 64px;
+  transition: background-color 0.2s ease;
+}
+
+.chatoverlay-overlaywrapper:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.chatoverlay-overlaywrapper:hover .chatoverlay-messageInputContainer {
+  opacity: 1;
+}
+
+.chatoverlay-messageInputContainer{
+  position: absolute;
+  border-radius: 0px 0px 4px 4px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 5px;
+  box-sizing: border-box;
+  transition: opacity 0.2s ease;
+  z-index: 10001;
+  opacity: 0;
+}
+
+.chatoverlay-messageInputBox {
+  flex: 1;
+  height: 100%;
+  padding: 0 10px;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  box-shadow: none;
+  outline: none;
+}
+
+.chatoverlay-chatcontainer {
+  position: relative;
+  width: 100%;
+  height: calc(100% - 48px); 
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  overflow: -moz-scrollbars-none;
+
+}
+
+
 .maejok-hide-scan_lines::after {
   content: none !important;
 }
