Fix username and timestamp overlay

--- a/src/styles/components/_misc.scss
+++ b/src/styles/components/_misc.scss
@@ -168,6 +168,10 @@
   margin-left: 4px;
 }
 
+.maejok-close-button-fix {
+  margin-left: auto !important;
+}
+
 .maejok-chatters_presence-container {
   text-align: center;
   cursor: pointer;
